# SkillClaw

./: README.md  pyproject.toml
evolve_server/: __main__.py
evolve_server/core/: config.py
evolve_server/engines/: agent.py  common.py  workflow.py
scripts/: demo_nacos_skill_lifecycle.py
skillclaw/: api_server.py  claw_adapter.py  cli.py  config.py  config_store.py  dashboard_ingest.py  dashboard_server.py  nacos_skill_hub.py  runtime_state.py  setup_wizard.py  skill_hub.py  validation_store.py
tests/: test_anthropic_messages.py  test_anthropic_messages_api.py  test_codex_profile_integration.py  test_nacos_skill_hub.py  test_nacos_working_version_push.py  test_responses_native.py  test_session_upload_trigger.py  test_skill_backend_config.py  test_skill_bundle_support.py
